2011-11-26 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-boxed.h:
	* src/api/na-timeout.h:
	* src/core/na-boxed.c:
	* src/core/na-data-boxed.c:
	* src/core/na-gconf-migration.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/core/na-icontext.c:
	* src/core/na-iduplicable.c:
	* src/core/na-iprefs.c:
	* src/core/na-object-item.c:
	* src/core/na-object.c:
	* src/core/na-settings.c:
	* src/core/na-updater.c: Only reference minor version in 'Since:' and
	'Deprecated' comments.

	* run-autogen.sh: Change development installation directory to _install.

	* configure.ac: gtk-doc and gnome-doc-utils are no more mandatory packages.

	m4_ifdef is not a good way to test if these packages are available, as the
	m4 files default ot be distributed.

	* Makefile.am: Explicitely disable scrollkeeper here when making distcheck.

2011-11-25 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/Makefile.am: Fully review the NACT User's Manual build.

	* configure.ac: gtk-doc and gnome-doc-utils are no more mandatory packages.

	* Makefile.am:
	No more try to rebuild manuals when making distcheck.
	Move gnome-doc-utils.make and gtk-doc.make to MAINTAINERCLEANFILES target.

	* run-autogen.sh:
	Rename 'autogen_target' variable to 'target'.
	Remove distcheck target as doc is enough to build manuals.

	* run-distcheck.sh: Update to new 'target' variable and 'doc' target.

	* docs/reference/Makefile.am:
	gtk-doc is no more a mandatory package.
	Requires gtk-doc 1.15 to take advantage of new source option.

	* docs/reference/nautilus-actions-docs.xml: Bump copyright year.

2011-11-21 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nautilus-actions-config-tool.ui:
	Remove empty children from GtkAssistant container.

	* src/nact/nact-assistant-import.c:
	Adapt to the new way Gtk+ 3.2 builds the assistant.

	* src/nact/base-application.c (appli_initialize_gtk): Fix a typo.

	* src/core/na-gtk-utils.c (na_gtk_utils_dump_children):